package edu.hitsz.game;

public enum GameDifficulty {
    EASY,
    NORMAL,
    HARD
}
